# Simple-chatbot

./: .dockerignore  .env.example  .env.railway.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.widget  README.md  docker-compose.yml  nginx.conf  pyproject.toml  railway.toml  requirements-backend.txt  requirements-frontend.txt
backend/: Dockerfile  __init__.py  railway.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  chat.py  feedback.py  history.py  ingest.py
backend/app/core/: __init__.py  limiter.py
backend/app/database/: chroma.py  models.py  session.py
backend/app/ingest/: chunker.py  crawler.py  image_processor.py  pipeline.py
backend/app/models/: schemas.py
backend/app/prompts/: templates.py
backend/app/rag/: embeddings.py  llm.py  retriever.py
backend/app/services/: auth_service.py  feedback_service.py  history_service.py  rag_service.py
backend/app/utils/: exceptions.py  logging.py  security.py  text.py  timing.py  tls.py
data/chroma/: chroma.sqlite3
data/images/: metadata.json
frontend/: Dockerfile  streamlit_app.py
frontend/widget/: README.md  chat-widget.css  chat-widget.js  example.html  index.html
scripts/: ingest.py  inspect_kb.py  verify_db_credentials.py
tests/: async.py  test_chunker.py  test_crawler.py  test_ollama.py  test_schemas.py  test_text_utils.py
